Criação página de registo para o cliente

--- a/templates/register_client.html
+++ b/templates/register_client.html
@@ -31,6 +31,12 @@
         <label for="nif">NIF:</label>
         <input type="text" name="nif" id="nif" required>
         <br>
+        <label for="password">Senha:</label>
+        <input type="password" id="password" name="password" minlength="8" required>
+        <br>
+        <label for="confirm_password">Confirmar Senha:</label>
+        <input type="password" id="confirm_password" name="confirm_password" minlength="8" required>
+        <br>
         <input type="submit" value="Registrar">
     </form>
 </body>
