--- a/templates/register_client.html
+++ b/templates/register_client.html
@@ -1,43 +1,42 @@
 <!-- register_client.html -->
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Registro do Cliente</title>
-</head>
-<body>
-    <!-- Incluir o template do cabeçalho específico para o login do cliente -->
-    {% include 'client_header.html' %}
+<h1>Registrar Cliente</h1>
 
-    <h1>Registro do Cliente</h1>
-    <form method="post" action="{{ url_for('register_client') }}">
+<form method="post" action="{{ url_for('register_client') }}">
+    <div>
         <label for="nome">Nome:</label>
-        <input type="text" name="nome" id="nome" required>
-        <br>
+        <input type="text" id="nome" name="nome" required>
+    </div>
+    <div>
         <label for="apelido">Apelido:</label>
-        <input type="text" name="apelido" id="apelido" required>
-        <br>
+        <input type="text" id="apelido" name="apelido" required>
+    </div>
+    <div>
         <label for="email">Email:</label>
-        <input type="email" name="email" id="email" required>
-        <br>
+        <input type="email" id="email" name="email" required>
+    </div>
+    <div>
         <label for="telefone">Telefone:</label>
-        <input type="tel" name="telefone" id="telefone" required>
-        <br>
+        <input type="text" id="telefone" name="telefone" required>
+    </div>
+    <div>
         <label for="data_nascimento">Data de Nascimento:</label>
-        <input type="date" name="data_nascimento" id="data_nascimento" required>
-        <br>
+        <input type="date" id="data_nascimento" name="data_nascimento" required>
+    </div>
+    <div>
         <label for="morada">Morada:</label>
-        <input type="text" name="morada" id="morada" required>
-        <br>
+        <input type="text" id="morada" name="morada" required>
+    </div>
+    <div>
         <label for="nif">NIF:</label>
-        <input type="text" name="nif" id="nif" required>
-        <br>
+        <input type="text" id="nif" name="nif" required>
+    </div>
+    <div>
         <label for="password">Senha:</label>
         <input type="password" id="password" name="password" minlength="8" required>
-        <br>
+    </div>
+    <div>
         <label for="confirm_password">Confirmar Senha:</label>
         <input type="password" id="confirm_password" name="confirm_password" minlength="8" required>
-        <br>
-        <input type="submit" value="Registrar">
-    </form>
-</body>
-</html>
+    </div>
+    <button type="submit">Registrar</button>
+</form>
