Criação página de registo para o cliente

--- a/templates/register_client.html
+++ b/templates/register_client.html
@@ -40,3 +40,8 @@
     </div>
     <button type="submit">Registrar</button>
 </form>
+{% if success_message %}
+    <div class="alert alert-success" role="alert">
+        {{ success_message }}
+    </div>
+{% endif %}
