--- a/templates/register_client.html
+++ b/templates/register_client.html
@@ -1,4 +1,5 @@
 <!-- register_client.html -->
+{% include 'client_header.html' %}
 <h1>Registrar Cliente</h1>
 
 <form method="post" action="{{ url_for('register_client') }}">
