Adicionar a classe veículo, controle de categoria, diária e disponibilidade

--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Vehicle - {{ title }}</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}">
-</head>
-<body>
-    {% include 'admin_header.html' %}
+{% extends 'base_admin.html' %}
+
+{% block content %}
+
 
     <div class="container mt-4">
         <h1>Edit Vehicle</h1>
@@ -43,7 +34,4 @@
         </form>
     </div>
 
-    <!-- Bootstrap JavaScript -->
-    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
-</body>
-</html>
+{% endblock %}
