--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Panel - {{ title }}</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}">
-</head>
-<body>
-    {% include 'admin_header.html' %}
+{% extends 'base_admin.html' %}
+
+{% block content %}
 
     <div class="container mt-4">
         <h1>Admin Panel</h1>
@@ -38,8 +28,27 @@
                 <label for="price_per_day" class="form-label">Price per Day</label>
                 <input type="number" class="form-control" id="price_per_day" name="price_per_day" required>
             </div>
-            <button type="submit" class="btn btn-primary">Add Vehicle</button>
-        </form>
+            <div class="form-group">
+        <label for="category">Categoria:</label>
+        <select class="form-control" id="category" name="category">
+            <option value="Económico">Económico</option>
+            <option value="Silver">Silver</option>
+            <option value="Gold">Gold</option>
+        </select>
+        </div>
+
+        <div class="form-group">
+            <label for="daily_value">Diária desejada (aproximada) até:</label>
+            <input type="number" class="form-control" id="daily_value" name="daily_value" required>
+        </div>
+
+        <div class="form-group">
+            <label for="is_available">Disponível para aluguel:</label>
+            <input type="checkbox" class="form-check-input" id="is_available" name="is_available" checked>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Adicionar Veículo</button>
+    </form>
 
         <h2 class="mt-4">Vehicle List</h2>
         <table class="table mt-2">
@@ -74,8 +83,4 @@
             </tbody>
         </table>
     </div>
-
-    <!-- Bootstrap JavaScript -->
-    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
-</body>
-</html>
+{% endblock %}
