--- a/templates/admin.html
+++ b/templates/admin.html
@@ -48,17 +48,19 @@
         <button type="submit" class="btn btn-primary">Adicionar</button>
     </form>
 
-    <h2 class="mt-4">Vehicle List</h2>
+    <h2 class="mt-4">Lista de veículos</h2>
     <table class="table mt-2">
         <thead>
             <tr>
                 <th scope="col">ID</th>
-                <th scope="col">Type</th>
-                <th scope="col">Brand</th>
-                <th scope="col">Model</th>
-                <th scope="col">Year</th>
-                <th scope="col">Price per Day</th>
-                <th scope="col">Action</th>
+                <th scope="col">Tipo</th>
+                <th scope="col">Marca</th>
+                <th scope="col">Modelo</th>
+                <th scope="col">Ano</th>
+                <th scope="col">Diária</th>
+                <th scope="col">Status</th>
+                <th scope="col">Categoria</th>
+                <th scope="col">Ação</th>
             </tr>
         </thead>
         <tbody>
@@ -70,12 +72,15 @@
                 <td>{{ vehicle.model }}</td>
                 <td>{{ vehicle.year }}</td>
                 <td>{{ vehicle.price_per_day }}</td>
+                <td>{% if vehicle.status %}Disponível{% else %}Não Disponível{%
+                    endif%}</td>
+                <td>{{ vehicle.categoria }}</td>
                 <td>
                     <a href="{{ url_for('edit_vehicle', id=vehicle.id) }}"
-                        class="btn btn-sm btn-primary">Edit</a>
+                        class="btn btn-sm btn-primary">Editar</a>
                     <form method="post" class="d-inline-block">
                         <button type="submit" class="btn btn-sm btn-danger"
-                            onclick="return confirm('Are you sure you want to delete this vehicle?')">Delete</button>
+                            onclick="return confirm('Tens certeza que deseja excluir este veículo?')">Excluir</button>
                     </form>
                 </td>
             </tr>
