--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -42,6 +42,7 @@
                 readonly required>
         </div>
         <button type="submit" class="btn btn-primary">Salvar Alterações</button>
+        <a href="{{ url_for('admin_panel') }}" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
 
